styled users all page

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,17 +1,16 @@
-<div id="<%= dom_id user %>">
-  <p>
-    <strong>Username:</strong>
-    <%= user.username %>
-  </p>
-
-  <p>
-    <strong>First name:</strong>
-    <%= user.first_name %>
-  </p>
-
-  <p>
-    <strong>Last name:</strong>
-    <%= user.last_name %>
-  </p>
-
+<div id="<%= dom_id user %>" class="flex items-center">
+  <% if user.avatar.attached? %>
+    <%= image_tag user.avatar, class: "w-12 h-12 rounded-full object-cover", style: "margin-right: 10px;" %>
+  <% else %>
+    <%= image_tag "default-avatar.svg", class: "w-12 h-12 rounded-full object-cover", style: "margin-right: 10px;" %>
+  <% end %>
+  <div class="ml-4 flex-grow">
+    <div class="flex items-center justify-between">
+      <h2 class="text-lg font-semibold"><%= user.username %></h2>
+      <span class="text-sm text-gray-600">
+        <%= pluralize(user.card_collections.count, 'practice deck') %>
+      </span>
+    </div>
+    <p class="text-gray-600 text-sm"><%= "#{user.first_name} #{user.last_name}" %></p>
+  </div>
 </div>
